--- a/index.ejs
+++ b/index.ejs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Aurelia Navigation Skeleton</title>
+    <title>Empowered Through Time, Tithes, and Treasures</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
     <link rel="icon" href="favicon.ico">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
-  <body aurelia-app="main">
+  <body aurelia-app="main" class="py-0">
   </body>
 </html>
