--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -15,6 +15,9 @@
 // Bootstrap core
 @import '../../../node_modules/bootstrap/scss/bootstrap';
 
+// Bootstrap icons
+@import '../../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+
 /*----------------------------------------------------------------------
   * Unify - Multipurpose Responsive Template version v1.0
   * Copyright 2021 Htmlstream
